# fastapi-2fa-example

./: .env.template  .env.testing  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 6b2159be9d96_init.py
fastapi_2fa_example/: api.py  config.py  logger.py  mail_sender.py  main.py  postgres.py  redis.py
fastapi_2fa_example/auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
fastapi_2fa_example/health/: router.py
fastapi_2fa_example/models/: __init__.py  base.py  user.py
fastapi_2fa_example/users/: router.py  schemas.py  service.py
scripts/: down.sh  make_migration.sh  migrate.sh  up.sh
src/fastapi_2fa_example/: config.py  postgres.py
src/fastapi_2fa_example/auth/: router.py  schemas.py
src/fastapi_2fa_example/models/: __init__.py  base.py  otp.py  user.py
src/fastapi_2fa_example/users/: schemas.py
tests/: conftest.py
tests/fixtures/: __init__.py  auth.py  base.py  database.py  mail_sender.py  random_objects.py  redis.py
tests/integration/auth/: test_router.py  test_service.py
tests/integration/health/: test_router.py
tests/integration/users/: test_router.py  test_service.py
tests/unit/: test_auth_dependencies.py  test_auth_schemas.py  test_auth_utils.py
